chg: show metadata using a json viewer

--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -27,19 +27,11 @@
     </div>
 </div>
 
-<c-accordion type='multiple' open="{'item-1': true, 'item-2': true, 'fetch': true}" class="mt-4">
-    {% if dataset.fetch %}
-    <c-accordion.item value='fetch'>
-        <c-accordion.trigger value='fetch' class="text-2xl font-bold">Fetch</c-accordion.trigger>
-        <c-accordion.content value='fetch'>
-            <c-json-object-viewer :dict="dataset.fetch"></c-json-object-viewer>
-        </c-accordion.content>
-    </c-accordion.item>
-    {% endif %}
+<c-accordion type='multiple' open="{'item-1': true, 'item-2': true}" class="mt-4">
     <c-accordion.item value='item-1'>
         <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
         <c-accordion.content value='item-1'>
-            <c-json-object-viewer :dict="dataset.metadata"></c-json-object-viewer>
+            {{ metadata_preview|safe }}
         </c-accordion.content>
     </c-accordion.item>
     <c-accordion.item value='item-2'>
