--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -36,7 +36,7 @@
     <c-accordion.item value='item-1'>
         <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
         <c-accordion.content value='item-1'>
-            <c-json-object-viewer :dict="object.metadata"></c-json-object-viewer>
+            {{ metadata_preview|safe }}
         </c-accordion.content>
     </c-accordion.item>
     <c-accordion.item value='item-1'>
