fix: parquet preview

--- a/src/dms/static/css/parquet.css
+++ b/src/dms/static/css/parquet.css
@@ -1,4 +1,4 @@
-@import "https://esm.sh/hightable/dist/HighTable.css";
+@import "https://esm.sh/hightable@0.18.5/dist/HighTable.css";
 
 #parquet-preview {
     height: 50vh;
