--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -93,6 +93,12 @@
             {% render_table services %}
         </c-accordion.content>
     </c-accordion.item>
+    <c-accordion.item value='item-1'>
+        <c-accordion.trigger value='item-2' class="text-2xl font-bold">Datasets</c-accordion.trigger>
+        <c-accordion.content value='item-2'>
+            {% render_table datasets %}
+        </c-accordion.content>
+    </c-accordion.item>
 </c-accordion>
 
 
