feat: featured DMPs

--- a/src/dms/projects/templates/projects/dmp_filter.html
+++ b/src/dms/projects/templates/projects/dmp_filter.html
@@ -1,6 +1,6 @@
 {% extends 'base_filter.html' %}
 
-{% block page-title %}My DMPs{% endblock %}
+{% block page-title %}{{ title }}{% endblock %}
 
 {% block page-actions %}
 <div class="flex">
