--- a/src/dms/theme/templates/theme/home.html
+++ b/src/dms/theme/templates/theme/home.html
@@ -10,7 +10,7 @@
 
 <div class="mx-auto max-w-none p-5 px-10 my-2">
     <div class="flex flex-row gap-8">
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}">
+        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}?status=N">
             <i class="fas fa-people-group fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Projects</div>
         </a>
