--- a/src/dms/theme/templates/theme/partials/navigation.html
+++ b/src/dms/theme/templates/theme/partials/navigation.html
@@ -11,7 +11,7 @@
       <c-navigation-menu>
         <c-navigation-menu.list>
           <c-navigation-menu.item>
-            <c-navigation-menu.link href="{% url 'projects:project_list' %}"><i class="fas fa-people-group"></i> Projects</c-navigation-menu.link>
+            <c-navigation-menu.link href="{% url 'projects:project_list' %}?status=N"><i class="fas fa-people-group"></i> Projects</c-navigation-menu.link>
           </c-navigation-menu.item>
           <c-navigation-menu.item>
             <c-navigation-menu.link href="{% url 'datasets:dataset_list' %}"><i class="fas fa-database"></i> Datasets</c-navigation-menu.link>
