--- a/src/dms/theme/templates/theme/home.html
+++ b/src/dms/theme/templates/theme/home.html
@@ -22,9 +22,9 @@
             <i class="fas fa-server fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Services</div>
         </a>
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}">
+        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}?featured=true">
             <i class="fas fa-file-shield fa-4x text-secondary"></i>
-            <div class="text-2xl mt-3 font-semibold uppercase">DMPs<span class="text-lg">s</span></div>
+            <div class="text-2xl mt-3 font-semibold uppercase">DMP<span class="text-lg">s</span></div>
         </a>
     </div>
 </div>
