--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -24,6 +24,10 @@
                 <td>{{ project.get_status_display }}</td>
             </tr>
             <tr>
+                <td>Topics</td>
+                <td>{{ project.topics.all|join:", " }}</td>
+            </tr>
+            <tr>
                 <td>Tags</td>
                 <td>{{ project.tags.all|join:", " }}</td>
             </tr>
