--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -20,6 +20,15 @@
     <div class="flex gap-4">
         {% if dataset.project %}<a class="btn btn-primary" href="{% url 'projects:project_detail' pk=dataset.project_id %}">Project</a>{% endif %}
         <a class="btn btn-primary" href="{% url 'datasets:dataset_relationship_list' pk=dataset.id %}">Relationships</a>
+        {% has_perm 'datasets.add_dataset' user dataset as can_clone %}
+        {% if can_clone %}
+        <form class="inline" method="post" action="{% url 'datasets:dataset_clone' pk=dataset.id %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-secondary" title="Create a copy of this dataset">
+                <i class="fas fa-clone"></i> Clone
+            </button>
+        </form>
+        {% endif %}
         {% if can_change %}
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update' pk=dataset.id %}">Edit</a>
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update_metadata' pk=dataset.id %}">Edit Metadata</a>
