--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -32,7 +32,7 @@
 
 <p class="mt-5">Resource path: <a href="{{ object.uri }}">{{ object.uri }}</a></p>
 
-<c-accordion type='multiple' open="{'item-1': true, 'item-2': true , 'schema': true}" class="mt-4">
+<c-accordion type='multiple' open="{'item-1': true, 'item-2': true , 'schema': true, 'snippets': true}" class="mt-4">
     <c-accordion.item value='item-1'>
         <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
         <c-accordion.content value='item-1'>
@@ -45,6 +45,29 @@
             <c-json-object-viewer :dict="object.last_sync"></c-json-object-viewer>
         </c-accordion.content>
     </c-accordion.item>
+    {% if snippets %}
+    <c-accordion.item value='snippets'>
+        <c-accordion.trigger value='snippets' class="text-2xl font-bold">Snippets</c-accordion.trigger>
+        <c-accordion.content value='snippets'>
+            <c-tabs>
+                <c-tabs.list>
+                    {% for snippet in snippets %}
+                    <c-tabs.trigger value='{{ snippet.template }}'>{{ snippet.title }}</c-tabs.trigger>
+                    {% endfor %}
+                </c-tabs.list>
+                {% for snippet in snippets %}
+                    <c-tabs.content value='{{ snippet.template }}'>
+                    <pre>
+                        <code class="language-{{snippet.lang}}">
+{% include snippet.template with uri=object.uri spatial=snippet.spatial %}
+                        </code>
+                    </pre>
+                    </c-tabs.content>
+                {% endfor %}
+            </c-tabs>
+        </c-accordion.content>
+    </c-accordion.item>
+    {% endif %}
     {% block resource_specific_content %}
     {% endblock resource_specific_content %}
 </c-accordion>
