--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -18,8 +18,12 @@
         </p>
     </div>
     <div class="flex gap-4">
-        {% if dataset.project %}<a class="btn btn-primary" href="{% url 'projects:project_detail' pk=dataset.project_id %}">Project</a>{% endif %}
+        {% if dataset.project %}<a class="btn btn-primary"
+            href="{% url 'projects:project_detail' pk=dataset.project_id %}">Project</a>{% endif %}
         <a class="btn btn-primary" href="{% url 'datasets:dataset_relationship_list' pk=dataset.id %}">Relationships</a>
+        {% if can_change %}
+        <a class="btn btn-secondary" href="{% url 'nva:dataset_publication_link' pk=dataset.id %}">Link Publications</a>
+        {% endif %}
         {% has_perm 'datasets.add_dataset' user dataset as can_clone %}
         {% if can_clone %}
         <form class="inline" method="post" action="{% url 'datasets:dataset_clone' pk=dataset.id %}">
@@ -32,7 +36,8 @@
         {% if can_change %}
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update' pk=dataset.id %}">Edit</a>
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update_metadata' pk=dataset.id %}">Edit Metadata</a>
-        <a class="btn btn-primary" href="{% url 'datasets:dataset_contribution_manage' dataset_pk=dataset.pk %}">Contributions</a>
+        <a class="btn btn-primary"
+            href="{% url 'datasets:dataset_contribution_manage' dataset_pk=dataset.pk %}">Contributions</a>
         {% endif %}
         {% has_perm 'datasets.delete_dataset' user dataset as can_delete %}
         {% if can_delete %}
@@ -69,28 +74,33 @@
             <c-navigation-menu class="mb-4">
                 <c-navigation-menu.list class="items-center justify-start gap-2">
                     <c-navigation-menu.item>
-                        <c-navigation-menu.link class="bg-secondary" href='{% url "datasets:resource_create" dataset_pk=dataset.pk %}'>
+                        <c-navigation-menu.link class="bg-secondary"
+                            href='{% url "datasets:resource_create" dataset_pk=dataset.pk %}'>
                             <i class="fas fa-plus"></i> Generic Resource
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
-                        <c-navigation-menu.link class="bg-blue-500 text-white" href='{% url "datasets:mapresource_create" dataset_pk=dataset.pk %}'>
+                        <c-navigation-menu.link class="bg-blue-500 text-white"
+                            href='{% url "datasets:mapresource_create" dataset_pk=dataset.pk %}'>
                             <i class="fas fa-plus"></i> Map Resource <i class="fas fa-map"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
-                        <c-navigation-menu.link class="bg-green-500 text-white" href='{% url "datasets:rasterresource_create" dataset_pk=dataset.pk %}'>
+                        <c-navigation-menu.link class="bg-green-500 text-white"
+                            href='{% url "datasets:rasterresource_create" dataset_pk=dataset.pk %}'>
                             <i class="fas fa-plus"></i> Raster Resource <i class="fas fa-image"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
-                        <c-navigation-menu.link class="bg-purple-500 text-white" href='{% url "datasets:tabularresource_create" dataset_pk=dataset.pk %}'>
+                        <c-navigation-menu.link class="bg-purple-500 text-white"
+                            href='{% url "datasets:tabularresource_create" dataset_pk=dataset.pk %}'>
                             <i class="fas fa-plus"></i> Tabular Resource <i class="fas fa-table"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     {% comment %}
                     <c-navigation-menu.item>
-                        <c-navigation-menu.link class="bg-orange-500 text-white" href='{% url "datasets:partitionedresource_create" dataset_pk=dataset.pk %}'>
+                        <c-navigation-menu.link class="bg-orange-500 text-white"
+                            href='{% url "datasets:partitionedresource_create" dataset_pk=dataset.pk %}'>
                             <i class="fas fa-plus"></i><i class="fas fa-th-large"></i> Partitioned Resource
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
