--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -90,20 +90,20 @@
     </table>
 
 
-<c-accordion type='multiple' open="{'item-1': true, 'item-2': true, 'fetch': true}" class="mt-4">
-    <c-accordion.item value='item-2'>
-        <c-accordion.trigger value='item-2' class="text-2xl font-bold">Services</c-accordion.trigger>
-        <c-accordion.content value='item-2'>
-            {% render_table services %}
-        </c-accordion.content>
-    </c-accordion.item>
-    <c-accordion.item value='item-1'>
-        <c-accordion.trigger value='item-2' class="text-2xl font-bold">Datasets</c-accordion.trigger>
-        <c-accordion.content value='item-2'>
-            {% render_table datasets %}
-        </c-accordion.content>
-    </c-accordion.item>
-</c-accordion>
+    <c-accordion type='multiple' open="{'item-1': true, 'item-2': true, 'fetch': true}" class="mt-4">
+        <c-accordion.item value='item-2'>
+            <c-accordion.trigger value='item-2' class="text-2xl font-bold">Services</c-accordion.trigger>
+            <c-accordion.content value='item-2'>
+                {% render_table services %}
+            </c-accordion.content>
+        </c-accordion.item>
+        <c-accordion.item value='item-1'>
+            <c-accordion.trigger value='item-2' class="text-2xl font-bold">Datasets</c-accordion.trigger>
+            <c-accordion.content value='item-2'>
+                {% render_table datasets %}
+            </c-accordion.content>
+        </c-accordion.item>
+    </c-accordion>
 
 
 </div>
@@ -116,6 +116,7 @@
     <a class="btn btn-secondary" href="{% url 'projects:dmp_create' %}?project={{project.pk}}">Create a DMP</a>
     {% endif %}
     <a class="btn btn-primary" href="{% url 'projects:project_update' pk=project.number %}">Edit</a>
+    <a class="btn btn-secondary" href="{% url 'nva:project_nva_link' pk=project.number %}">Link NVA Project</a>
     {% endif %}
 </div>
 
