--- a/src/dms/datasets/templates/datasets/tabularresource_detail.html
+++ b/src/dms/datasets/templates/datasets/tabularresource_detail.html
@@ -1,7 +1,17 @@
 {% extends 'datasets/resource_detail_base.html' %}
 {% load static %}
+{% load render_table from django_tables2 %}
+
 
 {% block resource_specific_content %}
+{% if data_table %}
+<c-accordion.item value='tables'>
+    <c-accordion.trigger value='tables' class="text-2xl font-bold">Data Tables and Layers</c-accordion.trigger>
+    <c-accordion.content value='tables'>
+        {% render_table data_table %}
+    </c-accordion.content>
+</c-accordion.item>
+{% endif %}
 {% if object.metadata.driverShortName == 'Parquet' %}
 <c-accordion.item value='item-2'>
     <c-accordion.trigger value='item-2' class="text-2xl font-bold">Preview</c-accordion.trigger>
@@ -13,10 +23,10 @@
 {% endblock resource_specific_content %}
 
 {% block body_javascript %}
-    {{ block.super }}
-    {% if object.metadata.driverShortName == 'Parquet' %}
-    <link rel="stylesheet" href="{% static 'css/parquet.css' %}">
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="{% static 'js/parquet-preview.js' %}" data-type="module" type="text/babel"></script>
-    {% endif %}
+{{ block.super }}
+{% if object.metadata.driverShortName == 'Parquet' %}
+<link rel="stylesheet" href="{% static 'css/parquet.css' %}">
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script src="{% static 'js/parquet-preview.js' %}" data-type="module" type="text/babel"></script>
+{% endif %}
 {% endblock body_javascript %}
