fix: map height

--- a/src/dms/datasets/templates/datasets/partials/maplibre.html
+++ b/src/dms/datasets/templates/datasets/partials/maplibre.html
@@ -1,4 +1,4 @@
-<div id="map" style="width: 100%; height: '{{ map_height }}'"></div>
+<div id="map" style="width: 100%; height: {{ map_height }}"></div>
 
 <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
 <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
