--- a/src/dms/datasets/templates/datasets/rasterresource_detail.html
+++ b/src/dms/datasets/templates/datasets/rasterresource_detail.html
@@ -2,9 +2,9 @@
 
 {% block resource_specific_content %}
 {% if object.metadata.driverShortName == 'GTiff' and object.metadata.metadata.IMAGE_STRUCTURE.LAYOUT == 'COG' %}
-<c-accordion.item value='item-2'>
-    <c-accordion.trigger value='item-2' class="text-2xl font-bold">Preview</c-accordion.trigger>
-    <c-accordion.content value='item-2'>
+<c-accordion.item value='preview'>
+    <c-accordion.trigger value='preview' class="text-2xl font-bold">Preview</c-accordion.trigger>
+    <c-accordion.content value='preview'>
         <img src="{{object.preview_url}}" />
     </c-accordion.content>
 </c-accordion.item>
