chg: use red, lazy preview

--- a/src/dms/datasets/templates/datasets/partials/maplibre.html
+++ b/src/dms/datasets/templates/datasets/partials/maplibre.html
@@ -21,8 +21,8 @@
             type: 'fill',
             source: 'data',
             paint: {
-                'fill-color': '#0080ff',
-                'fill-opacity': 0.5
+                'fill-color': 'red',
+                'fill-opacity': 0.5,
             }
         });
     });
