--- a/src/dms/datasets/templates/datasets/rasterresource_detail.html
+++ b/src/dms/datasets/templates/datasets/rasterresource_detail.html
@@ -5,7 +5,7 @@
 <c-accordion.item value='preview'>
     <c-accordion.trigger value='preview' class="text-2xl font-bold">Preview</c-accordion.trigger>
     <c-accordion.content value='preview'>
-        <img src="{{object.preview_url}}" />
+        <img src="{{object.preview_url}}" loading="lazy" />
     </c-accordion.content>
 </c-accordion.item>
 {% endif %}
