feat: draft upload big files

--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -120,6 +120,12 @@
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     {% endcomment %}
+                    <c-navigation-menu.item>
+                        <c-navigation-menu.link class="bg-secondary"
+                            href='{% url "datasets:resource_upload" dataset_pk=dataset.pk %}'>
+                            <i class="fas fa-upload"></i> Upload Resource
+                        </c-navigation-menu.link>
+                    </c-navigation-menu.item>
                 </c-navigation-menu.list>
             </c-navigation-menu>
             {% endif %}
