--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -16,17 +16,21 @@
     </div>
     <div class="flex gap-4">
         <a class="btn btn-primary" href="{% url 'datasets:dataset_detail' pk=object.dataset_id %}">Dataset</a>
-        <a class="btn btn-primary" href="{{ object.edit_url }}">Edit</a>
+
         {% has_perm 'datasets.change_resource' user object as can_change %}
         {% if can_change %}
+        <a class="btn btn-primary" href="{{ object.edit_url }}">Edit</a>
+        <a class="btn btn-secondary"
+            href="{% url 'datasets:resource_convert' dataset_pk=object.dataset_id pk=object.pk %}">Change resource
+            type</a>
         <c-action_form action="{% url 'datasets:resource_refresh_metadata' dataset_pk=object.dataset_id pk=object.pk %}"
-            class="btn">
+            class="btn text-white">
             Refresh Metadata
         </c-action_form>
         {% endif %}
         {% has_perm 'datasets.delete_resource' user object as can_delete %}
         {% if can_delete %}
-        <a class="btn btn-error"
+        <a class="btn btn-error text-error-content"
             href="{% url 'datasets:resource_delete' dataset_pk=object.dataset_id pk=object.pk %}">Delete</a>
         {% endif %}
     </div>
